--- a/.github/workflows/deployPortfolio.yml
+++ b/.github/workflows/deployPortfolio.yml
@@ -22,6 +22,6 @@ jobs:
         run: |
           lftp -e "mirror -R ./ /public_html; quit" -u ${{ secrets.FTP_USERNAME }},${{ secrets.FTP_PASSWORD }} ftp://${{ secrets.FTP_SERVER }}
         env:
-          FTP_SERVER: ftp.tudominio.com  # Reemplaza con tu servidor FTP
+          FTP_SERVER: ${{ secrets.FTP_SERVER }} # Reemplaza con tu servidor FTP
           FTP_USERNAME: ${{ secrets.FTP_USERNAME }}  # Usa los secretos de GitHub
           FTP_PASSWORD: ${{ secrets.FTP_PASSWORD }}  # Usa los secretos de GitHub
