--- a/.github/workflows/deployPortfolio.yml
+++ b/.github/workflows/deployPortfolio.yml
@@ -3,25 +3,24 @@ name: Deploy Portfolio to Namecheap
 on:
   push:
     branches:
-      - main  # Cambia a la rama en la que trabajas, si es diferente a 'main'
+      - main
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
+
     steps:
-      # Paso 1: Revisar el código del repositorio
-      - name: Checkout code
+      - name: Checkout repo
         uses: actions/checkout@v2
 
-      # Paso 2: Instalar dependencias de FTP
       - name: Install lftp
-        run: sudo apt-get install lftp
+        run: sudo apt-get install -y lftp
 
-      # Paso 3: Subir archivos via FTP
-      - name: Upload files to Namecheap FTP server
+      - name: Deploy to Namecheap via FTP
         run: |
-          lftp -e "debug; mirror -R ./ /public_html; quit" -u ${{ secrets.FTP_USERNAME }},${{ secrets.FTP_PASSWORD }} ftp://${{ secrets.FTP_SERVER }}
-        env:
-          FTP_SERVER: ${{ secrets.FTP_SERVER }} # Reemplaza con tu servidor FTP
-          FTP_USERNAME: ${{ secrets.FTP_USERNAME }}  # Usa los secretos de GitHub
-          FTP_PASSWORD: ${{ secrets.FTP_PASSWORD }}  # Usa los secretos de GitHub
+          lftp -u ${{ secrets.FTP_USERNAME }},${{ secrets.FTP_PASSWORD }} ${{ secrets.FTP_SERVER }} <<EOF
+          set ssl:verify-certificate no
+          mirror -R ./ ./
+          quit
+          EOF
+
