--- a/.github/workflows/deployPortfolio.yml
+++ b/.github/workflows/deployPortfolio.yml
@@ -20,10 +20,9 @@ jobs:
         env:
           LFTP_PASSWORD: ${{ secrets.FTP_PASSWORD }}
         run: |
-          lftp -u ${{ secrets.FTP_USERNAME }} --env-password ${{ secrets.FTP_SERVER }} <<EOF
-          set ssl:verify-certificate no
+          echo "set ssl:verify-certificate no
           mirror -R ./ ./
-          quit
-          EOF
+          quit" | lftp -u "${{ secrets.FTP_USERNAME }}" --env-password "${{ secrets.FTP_SERVER }}"
+
 
 
