--- a/.github/workflows/deployPortfolio.yml
+++ b/.github/workflows/deployPortfolio.yml
@@ -17,12 +17,11 @@ jobs:
         run: sudo apt-get install -y lftp
 
       - name: Deploy to Namecheap via FTP
-        env:
-          LFTP_PASSWORD: ${{ secrets.FTP_PASSWORD }}
         run: |
           echo "set ssl:verify-certificate no
           mirror -R ./ ./
-          quit" | lftp -u "${{ secrets.FTP_USERNAME }}" --env-password "${{ secrets.FTP_SERVER }}"
+          quit" | lftp -u "${{ secrets.FTP_USERNAME }},${{ secrets.FTP_PASSWORD }}" "${{ secrets.FTP_SERVER }}"
+
 
 
 
