--- a/.github/workflows/deployPortfolio.yml
+++ b/.github/workflows/deployPortfolio.yml
@@ -16,13 +16,16 @@ jobs:
       - name: Install lftp
         run: sudo apt-get install -y lftp
 
+      - name: Configure .netrc for FTP credentials
+        run: |
+          echo "machine ${ { secrets.FTP_SERVER } }" > ~/.netrc
+          echo "login ${ { secrets.FTP_USERNAME } }" >> ~/.netrc
+          echo "password ${ { secrets.FTP_PASSWORD } }" >> ~/.netrc
+
       - name: Deploy to Namecheap via FTP
         run: |
-          lftp -u "${{ secrets.FTP_USERNAME }},${{ secrets.FTP_PASSWORD }}" "${{ secrets.FTP_SERVER }}" <<EOF
-          set ssl:verify-certificate no
-          mirror -R ./ ./
-          quit
-          EOF
+          lftp -e "set ssl:verify-certificate no; mirror -R ./ ./; quit"
+
 
 
 
